[cc-117077] | help menu| add help link page

--- a/ccc.html
+++ b/ccc.html
@@ -77,6 +77,8 @@
 <h1>ruhfwui</h1>
 <h1>ruhfwui</h1>
 <h1>ruhfwui</h1>
+<h2>som edetails to users</h2>
+<h2>som edetails to users</h2><h2>som edetails to users</h2><h2>som edetails to users</h2>
 <div><label>
     username
 </label>
@@ -157,7 +159,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-
+<a href="/HELP.HTML">HELP MENU</a>
 </body>
 
 </html>
